@@ -21,6 +21,8 @@ v0.35.01	05-Jun-2002
 	mbcico:
 		Now uses the new session password field for session handshake.
 		The binkd version string now includes the OS and CPU type.
+		If a transmitted file via binkp is skipped by the remote it
+		will stay in the queue for the next session.
 
 	mbfile:
 		Added -v commandline switch to supress virus checking for the
